--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,10 @@
-@(message: String)
+@()
 
-@main("Welcome to Play 2.1") {
-    
-    @play20.welcome(message)
-    
+@main("MINTPRESSO APPS") {
+  <h1>MINTPRESSO APPS</h1>
+  <hr />
+  <br />
+  <br />
+  <br />
+  <h2>All services operational.</h2>
 }
