--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -3,13 +3,41 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
-    </head>
-    <body>
-        @content
-    </body>
+  <head>
+    <title>@title</title>
+    @*
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+    <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+    *@
+    <script type="text/javascript" src="//use.typekit.net/tld5vsy.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    <style>
+      * {
+        font-family: "museo-sans", 'Helvetica Neue', Helvetica, 'Apple SD Gothic Neo', 'Nanum Gothic', 'Malgun Gothic', Arial, sans-serif;
+        color: #fff;
+      }
+      h1 {
+        font-size: 40pt;
+        font-weight: 900;
+      }
+      h2 {
+        font-size: 24pt;
+        font-weight: 100;
+      }
+      hr {
+        width: 150px;
+        border: solid 5px #1ABC9C;
+      }
+      body {
+        text-align: center;
+      }
+      img.typekit-badge {
+        display: none !important;
+      }
+    </style>
+  </head>
+  <body style="background-color: #333">
+    @content
+  </body>
 </html>
